--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -11,9 +11,9 @@
 # 全局
 # Site
 #---------------------------
-favicon: /img/favicon.png # 网站标签页的 icon
+favicon: /img/favicon_ely.png # 网站标签页的 icon
 
-apple_touch_icon: /img/favicon.png # 用于苹果设备的 icon
+apple_touch_icon: /img/favicon_ely.png # 用于苹果设备的 icon
 
 title_join_string: ' - '  # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 
@@ -430,7 +430,7 @@ links:
     - {
       title: 'Fluid Docs',
       intro: '主题使用指南',
-      link: 'https://hexo.fluid-dev.com/docs/',
+      link: 'https://hexo.fluid-dev.com/docs/guide/',
       image: '/img/link.png'
     }
     - {
